--- a/style.css
+++ b/style.css
@@ -174,6 +174,14 @@ button {
     font-weight: bold;
 }
 
+.fa-user-edit{
+    position: absolute;
+    top: 10%;
+    left: 24%;
+    color: rgb(52, 215, 11);
+    font-size: 20px;
+    font-weight: bold;
+}
 
 
 
